force-app/main/default/objects/Case/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <description>Use to by BPI team to determine when the next sales call is scheduled</description>
    <label>Next Call Date</label>
    <type>Date</type>
</CustomField>