force-app/main/default/objects/Case/fields/Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Date__c</fullName>
    <label>Next Service Date</label>
    <type>Date</type>
</CustomField>