force-app/main/default/objects/Case/fields/NextScheduledFollowingLastCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>NextScheduledFollowingLastCompletionDate__c</fullName>
    <description>Next Scheduled Following Last Completion Date</description>
    <label>Next Scheduled Following Last Completion</label>
    <type>Date</type>
</CustomField>