force-app/main/default/objects/Case/fields/NTE__c.field-meta.xml
<CustomField>
    <fullName>NTE__c</fullName>
    <description>The amount of pre-approved funds from the client or consumer in order to complete the extra work on this individual job/request as quickly as possible.</description>
    <inlineHelpText>The amount of pre-approved funds from the client or consumer for this INDIVIDUAL JOB ONLY. If the bid amount or unit pricing is higher than this amount, submit the bid for approval.</inlineHelpText>
    <label>NTE</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>