force-app/main/default/objects/Case/fields/OpenEms__c.field-meta.xml
<CustomField>
    <fullName>OpenEms__c</fullName>
    <label>Open Ems</label>
    <length>254</length>
    <type>Text</type>
</CustomField>