force-app/main/default/objects/Case/fields/OptimizationMarket__c.field-meta.xml
<CustomField>
    <fullName>OptimizationMarket__c</fullName>
    <label>Optimization Market</label>
    <length>254</length>
    <type>Text</type>
</CustomField>