force-app/main/default/objects/Case/fields/Original_Queue__c.field-meta.xml
<CustomField>
    <fullName>Original_Queue__c</fullName>
    <description>Lists the originally assigned queue for automation processes.</description>
    <label>Original Queue</label>
    <length>25</length>
    <type>Text</type>
</CustomField>