force-app/main/default/objects/Case/fields/OtherInScopeBidAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherInScopeBidAmount__c</fullName>
    <label>Other In-Scope Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>