force-app/main/default/objects/Case/fields/Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Queue__c</fullName>
    <formula>CONTAINS( Owner:Queue.Id , &apos;00G&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Queue</label>
    <type>Checkbox</type>
</CustomField>