force-app/main/default/objects/Case/fields/PastDueReason__c.field-meta.xml
<CustomField>
    <fullName>PastDueReason__c</fullName>
    <description>Reason for past due case</description>
    <label>Past Due Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Issue - Client Attention Needed</fullName>
            </value>
            <value>
                <fullName>Client Requested Reschedule</fullName>
            </value>
            <value>
                <fullName>Consumer Finance Issues</fullName>
            </value>
            <value>
                <fullName>Consumer Multiple Skips</fullName>
            </value>
            <value>
                <fullName>Consumer Non-Communication</fullName>
            </value>
            <value>
                <fullName>Consumer set Off-Season</fullName>
            </value>
            <value>
                <fullName>Contractor Reported Already Serviced</fullName>
            </value>
            <value>
                <fullName>Outstanding Bid - Client Approval Needed</fullName>
            </value>
            <value>
                <fullName>Overgrowth - Client Approval Needed</fullName>
            </value>
            <value>
                <fullName>Quality Control Rejection</fullName>
            </value>
            <value>
                <fullName>Recently Reassigned &amp; Scheduled</fullName>
            </value>
            <value>
                <fullName>Recruiting contractor for this coverage area</fullName>
            </value>
            <value>
                <fullName>Task Discontinued</fullName>
            </value>
            <value>
                <fullName>Tenant Refused Service - Client Attention Needed</fullName>
            </value>
            <value>
                <fullName>Weather Delay</fullName>
            </value>
            <value>
                <fullName>AM Team Error</fullName>
                <isActive>false</isActive>
                <label>AM Team Error</label>
            </value>
            <value>
                <fullName>Bid Delay</fullName>
                <isActive>false</isActive>
                <label>Bid Delay</label>
            </value>
            <value>
                <fullName>Bid Team Error</fullName>
                <isActive>false</isActive>
                <label>Bid Team Error</label>
            </value>
            <value>
                <fullName>Client Delay</fullName>
                <isActive>false</isActive>
                <label>Client Delay</label>
            </value>
            <value>
                <fullName>Consumer Skips</fullName>
                <isActive>false</isActive>
                <label>Consumer Skips</label>
            </value>
            <value>
                <fullName>Contractor Delay</fullName>
                <isActive>false</isActive>
                <label>Contractor Delay</label>
            </value>
            <value>
                <fullName>Contractor Missed Scope of Work</fullName>
                <isActive>false</isActive>
                <label>Contractor Missed Scope of Work</label>
            </value>
            <value>
                <fullName>Contractor Non-Communication</fullName>
                <isActive>false</isActive>
                <label>Contractor Non-Communication</label>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
                <isActive>false</isActive>
                <label>Equipment Failure</label>
            </value>
            <value>
                <fullName>Finance Issues</fullName>
                <isActive>false</isActive>
                <label>Finance Issues</label>
            </value>
            <value>
                <fullName>Job Skipped</fullName>
                <isActive>false</isActive>
                <label>Job Skipped</label>
            </value>
            <value>
                <fullName>Lack of Capacity</fullName>
                <isActive>false</isActive>
                <label>Lack of Capacity</label>
            </value>
            <value>
                <fullName>Low Contractor Earnings</fullName>
                <isActive>false</isActive>
                <label>Low Contractor Earnings</label>
            </value>
            <value>
                <fullName>MM Error</fullName>
                <isActive>false</isActive>
                <label>MM Error</label>
            </value>
            <value>
                <fullName>Market Support Error</fullName>
                <isActive>false</isActive>
                <label>Market Support Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>