force-app/main/default/objects/Case/fields/Pricing_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Client_Type__c</fullName>
    <description>The type of properties for which the pricing request is being generated.</description>
    <inlineHelpText>What type of client property are we requesting pricing?</inlineHelpText>
    <label>Pricing Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTR</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>Property Preservation</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>