force-app/main/default/objects/Case/fields/Pricing_Link__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Link__c</fullName>
    <description>The completed pricing link from the BPI team.</description>
    <inlineHelpText>The pricing sheet link from the BPI team.</inlineHelpText>
    <label>Pricing Link</label>
    <type>Url</type>
</CustomField>