force-app/main/default/objects/Case/fields/Pricing_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Type__c</fullName>
    <description>The type of services for which the pricing request has been generated.</description>
    <inlineHelpText>What services are we providing pricing for? Only one type per case.</inlineHelpText>
    <label>Pricing Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lawn</fullName>
            </value>
            <value>
                <fullName>Snow</fullName>
            </value>
            <value>
                <fullName>ASP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>