force-app/main/default/objects/Case/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <description>Pricing type for sales pricing request cases.</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Pricing</fullName>
            </value>
            <value>
                <fullName>Rate Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>