force-app/main/default/objects/Case/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>Order__r.Product_Family__c</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>