force-app/main/default/objects/Case/fields/Properties_that_need_service__c.field-meta.xml
<CustomField>
    <fullName>Properties_that_need_service__c</fullName>
    <label>Properties that need service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>