force-app/main/default/objects/Case/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <description>Property ID from the 2.0 property service.</description>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>