force-app/main/default/objects/Case/fields/PropertyState__c.field-meta.xml
<CustomField>
    <fullName>PropertyState__c</fullName>
    <label>Property State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>