force-app/main/default/objects/Case/fields/QC_Primary_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>QC_Primary_Rejection_Reason__c</fullName>
    <label>Primary Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QC_Responsible_Party__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>