force-app/main/default/objects/Case/fields/QC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>QC_Rejection_Reason__c</fullName>
    <description>Used in the QC Process</description>
    <label>Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>QC_Responsible_Party__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blurry/unclear Photos</fullName>
            </value>
            <value>
                <fullName>String Trimming</fullName>
            </value>
            <value>
                <fullName>Mowing</fullName>
            </value>
            <value>
                <fullName>Grass Clippings (OG)</fullName>
            </value>
            <value>
                <fullName>Blow Leaves/Grass Clippings/Incedental Debris</fullName>
            </value>
            <value>
                <fullName>Deep Edging</fullName>
            </value>
            <value>
                <fullName>Bush Trimming</fullName>
            </value>
            <value>
                <fullName>Spraying/Pulling Weeds</fullName>
            </value>
            <value>
                <fullName>Debris remains</fullName>
            </value>
            <value>
                <fullName>Gravel Not Raked Evenly</fullName>
            </value>
            <value>
                <fullName>Tree Trimming</fullName>
            </value>
            <value>
                <fullName>Stump Not Ground</fullName>
            </value>
            <value>
                <fullName>Debris Not Removed from Property</fullName>
            </value>
            <value>
                <fullName>Debris left in Client&apos;s Garbage Can</fullName>
            </value>
            <value>
                <fullName>Old Mulch Not Removed</fullName>
            </value>
            <value>
                <fullName>Wrong Color of Mulch</fullName>
            </value>
            <value>
                <fullName>Not all Leaves removed</fullName>
            </value>
            <value>
                <fullName>Deicer Not Applied</fullName>
            </value>
            <value>
                <fullName>Snow Not Cleared</fullName>
            </value>
            <value>
                <fullName>Wrong Property</fullName>
            </value>
            <value>
                <fullName>Serviced Too Soon</fullName>
            </value>
            <value>
                <fullName>Photos Missing</fullName>
            </value>
            <value>
                <fullName>Duplicate Photos</fullName>
            </value>
            <value>
                <fullName>Bid Only</fullName>
            </value>
            <value>
                <fullName>Scheduling Error</fullName>
            </value>
            <value>
                <fullName>2nd chance not completed over 72 hours</fullName>
            </value>
            <value>
                <fullName>Rep Error</fullName>
            </value>
            <value>
                <fullName>TE System Error</fullName>
            </value>
            <value>
                <fullName>Tenant Refused</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>