force-app/main/default/objects/Case/fields/QC_Rejection_Reasons_Formatted__c.field-meta.xml
<CustomField>
    <fullName>QC_Rejection_Reasons_Formatted__c</fullName>
    <description>Comma separated values of the &apos;QC rejection Reasons&apos; Multi-select picklist field. Auto populated by apex trigger.</description>
    <label>QC Rejection Reasons (Formatted)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>