force-app/main/default/objects/Case/fields/QC_Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>QC_Responsible_Party__c</fullName>
    <description>Used in the QC process</description>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>TaskEasy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>