force-app/main/default/objects/Case/fields/Quick_Action_Create__c.field-meta.xml
<CustomField>
    <fullName>Quick_Action_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify and triggers processes if a record was created by a quick action.</description>
    <label>Created by Quick Action</label>
    <type>Checkbox</type>
</CustomField>