force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Offline case submission - website chat widget - maps to the case region field.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>How TaskEasy Works/Join TaskEasy</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Service Change</fullName>
            </value>
            <value>
                <fullName>Cancel Service</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>Website or App Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>