force-app/main/default/objects/Case/fields/Region_ID__c.field-meta.xml
<CustomField>
    <fullName>Region_ID__c</fullName>
    <formula>IF( 
    NOT(ISBLANK(Contact.MailingState)),
    Contact.MailingState, Account.BillingState
)</formula>
    <label>Region ID</label>
    <type>Text</type>
</CustomField>