force-app/main/default/objects/Case/fields/Reject_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>Reject_Ticket_Link__c</fullName>
    <description>This is for the link to the original GIL QC reject ticket so advocates can go in and assign fault as well as schedule second chance jobs.</description>
    <inlineHelpText>Link to the GIL reject ticket.</inlineHelpText>
    <label>Gil Ticket Link</label>
    <type>Url</type>
</CustomField>