force-app/main/default/objects/Case/fields/Reopened_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Date_Time__c</fullName>
    <label>Reopened Date/Time</label>
    <type>DateTime</type>
</CustomField>