force-app/main/default/objects/Case/fields/RO_Market__c.field-meta.xml
<CustomField>
    <fullName>RO_Market__c</fullName>
    <description>Takes de RO Market from case account</description>
    <formula>TEXT(Account.RO_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RO Market</label>
    <type>Text</type>
</CustomField>