force-app/main/default/objects/Case/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <description>Scope of work to be completed for this case or the scope of work in question.</description>
    <inlineHelpText>What is the scope of work to be completed or in question? Select all that apply.</inlineHelpText>
    <label>Scope of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aeration</fullName>
            </value>
            <value>
                <fullName>Bush Removal</fullName>
            </value>
            <value>
                <fullName>Bush Trimming</fullName>
            </value>
            <value>
                <fullName>Custom Task</fullName>
            </value>
            <value>
                <fullName>Debris Removal</fullName>
            </value>
            <value>
                <fullName>Dethatching</fullName>
            </value>
            <value>
                <fullName>Edging</fullName>
            </value>
            <value>
                <fullName>Fall Cleanup</fullName>
            </value>
            <value>
                <fullName>Fertilization</fullName>
            </value>
            <value>
                <fullName>Gutter Clearing</fullName>
            </value>
            <value>
                <fullName>Irrigation Inspection</fullName>
            </value>
            <value>
                <fullName>Lawn Overgrowth</fullName>
            </value>
            <value>
                <fullName>Leaf Cleanup</fullName>
            </value>
            <value>
                <fullName>Mulch Installation</fullName>
            </value>
            <value>
                <fullName>Mulch Refresh</fullName>
            </value>
            <value>
                <fullName>One time Economy Lawn Service</fullName>
            </value>
            <value>
                <fullName>One Time Premium Lawn Service</fullName>
            </value>
            <value>
                <fullName>Palm Trimming</fullName>
            </value>
            <value>
                <fullName>Pet Waste Cleanup</fullName>
            </value>
            <value>
                <fullName>Planting</fullName>
            </value>
            <value>
                <fullName>Pressure Washing</fullName>
            </value>
            <value>
                <fullName>Recurring Budget/Economy Service</fullName>
            </value>
            <value>
                <fullName>Recurring Premium Service</fullName>
            </value>
            <value>
                <fullName>Rock Installation</fullName>
            </value>
            <value>
                <fullName>Rock Refresh</fullName>
            </value>
            <value>
                <fullName>Sale Clean</fullName>
                <label>Sales Clean</label>
            </value>
            <value>
                <fullName>Pool Cleaning</fullName>
            </value>
            <value>
                <fullName>Seeding</fullName>
            </value>
            <value>
                <fullName>Spring Cleanup</fullName>
            </value>
            <value>
                <fullName>Sprinkler Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>