force-app/main/default/objects/Case/fields/Service_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Service_Blocking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Blocking</label>
    <type>Checkbox</type>
</CustomField>