force-app/main/default/objects/Case/fields/Service_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Item_ID__c</fullName>
    <label>Service Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>