force-app/main/default/objects/Case/fields/Status_Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Summary__c</fullName>
    <inlineHelpText>Provide a brief summary related of the case status and the reason for the status change.</inlineHelpText>
    <label>Status Change Summary</label>
    <type>TextArea</type>
</CustomField>