force-app/main/default/objects/Case/fields/TakeRate__c.field-meta.xml
<CustomField>
    <fullName>TakeRate__c</fullName>
    <label>Take Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>