force-app/main/default/objects/Case/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <description>The Task ID associated with the case.</description>
    <inlineHelpText>The Task ID associated with the case.</inlineHelpText>
    <label>Task ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>