force-app/main/default/objects/Case/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>