force-app/main/default/objects/Case/fields/te_ticket_id__c.field-meta.xml
<CustomField>
    <fullName>te_ticket_id__c</fullName>
    <externalId>true</externalId>
    <label>te_ticket_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>