force-app/main/default/objects/Case/fields/TEBidCounteroffer__c.field-meta.xml
<CustomField>
    <fullName>TEBidCounteroffer__c</fullName>
    <description>If counteroffer made, record the amount of counteroffer here</description>
    <label>TE Bid Counteroffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>