force-app/main/default/objects/Case/fields/TEBidCounterofferAccepted__c.field-meta.xml
<CustomField>
    <fullName>TEBidCounterofferAccepted__c</fullName>
    <description>Was counteroffer accepted?</description>
    <label>TE Bid Counteroffer Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>