force-app/main/default/objects/Case/fields/TECounterofferAcceptedPercentage__c.field-meta.xml
<CustomField>
    <fullName>TECounterofferAcceptedPercentage__c</fullName>
    <description>Counteroffer divided by Total Requested Amount : NOT VISIBLE TO AGENT</description>
    <label>TE Counteroffer - Accepted: Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>