force-app/main/default/objects/Case/fields/TotalDaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>TotalDaysPastDue__c</fullName>
    <formula>If(IsClosed, DaysPastDue__c + (  ClosedDate - CreatedDate ), DaysPastDue__c + (  NOW()  - CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>