force-app/main/default/objects/Case/fields/Turns_Status__c.field-meta.xml
<CustomField>
    <fullName>Turns_Status__c</fullName>
    <description>Specifies the status of turns.</description>
    <label>Turns Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>TE Accepted</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Acceptance</fullName>
            </value>
            <value>
                <fullName>Vendor Accepted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>QA pending</fullName>
            </value>
            <value>
                <fullName>Client has Responded</fullName>
            </value>
            <value>
                <fullName>QA remedy</fullName>
            </value>
            <value>
                <fullName>QA Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on Contractor</fullName>
            </value>
            <value>
                <fullName>Response Received</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>