force-app/main/default/objects/Case/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>