force-app/main/default/objects/Case/fields/Urgent_Account_Name_Client__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Account_Name_Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name (Client)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Account Name (Client))</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>