force-app/main/default/objects/Case/fields/Urgent_Account_Name_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Account_Name_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name (Contractor)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Account Name (Contractor))</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>