force-app/main/default/objects/Case/fields/Urgent_Client_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Client_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only select this box when an existing Client Inquiry Case requires escalation to an Urgent Client Request State</inlineHelpText>
    <label>Urgent Client Escalation</label>
    <type>Checkbox</type>
</CustomField>