force-app/main/default/objects/Case/fields/Urgent_Client_Request__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Client_Request__c</fullName>
    <description>Used to distinguish Urgent Client Request cases from within Process builder.  ---  used for criteria only</description>
    <formula>RecordType.DeveloperName = &quot;Urgent_Client_Request&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgent Client Request</label>
    <type>Checkbox</type>
</CustomField>