force-app/main/default/objects/Case/fields/Urgent_Description_Initial_Description__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Description_Initial_Description__c</fullName>
    <label>Description (Initial Description)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>