force-app/main/default/objects/Case/fields/Urgent_Elite_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Elite_Team_Notes__c</fullName>
    <label>Elite Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>